<resources>

    <string name="app_name">Contact Is Money</string>
    <string name="title_activity_main">Contact Is Money</string>
    <string name="my_contacts">My Contacts</string>
    <string name="title_activity_registers">Registers</string>
    <string name="all_contacts">All Contacts</string>
    <string name="title_activity_add_register">Add Register</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="delete_register_message">Delete this register?</string>
    <string name="stats">Stats</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="value">Value</string>
    <string name="name">Name</string>
    <string name="balance">Balance</string>
    <string name="buy">Buy</string>
    <string name="pay">Pay</string>
    <string name="history">History</string>
    <string name="count_of_contacts">Count of Contacts</string>
    <string name="receivable">Receivable</string>
    <string name="greater_balance">Greater balance</string>
    <string name="average_by_contact">Average by contact</string>

</resources>